src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pan_Card_Number__c</fullName>
        <label>Pan Card Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>